# homomorphic_lab

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  requirements.txt  run_executables_in_logical_order.sh  svm_cat_dog.py
client_server_hmo_example/: CMakeLists.txt  basic_example.h
docker/: Dockerfile  docker-compose.yml
docker/DebugImage/: Dockerfile
docker/ServerImage/: Dockerfile
example_inputs/: client_query.json  encryption_parameters_config.json  model.json
model_training/: svm_cat_dog.py  train_svm_model.py
notebook/: README.md  homomorphic_encription_lab.ipynb
porter_out/: compile_c_model.sh  run_classification.sh
server/: CMakeLists.txt  basic_example.cpp  basic_example.h  main.cpp  main.h  predict.cpp  run_executables_in_logical_order.sh
server/src/: client_read_parameters_encrypt_query.cpp  client_read_results_decrypt_query_result.cpp  server_generate_parameters.cpp  server_run_computation.cpp  utils.h
src/: basic_example.cpp  client_read_parameters_encrypt_query.cpp  client_read_results_decrypt_query_result.cpp  server_generate_parameters.cpp  server_run_computation.cpp  utils.h
